--- a/lec3.tex
+++ b/lec3.tex
@@ -10,13 +10,20 @@ We can simplify this slightly; first we use the fact that $\unfold \; (\fold \; 
 \[
   \vpred{\mu\alpha. \; \tau} = \{\fold \; v \vbar v \in \vpred{\sub{\tau}{\mu\alpha.\;\tau}{\alpha}} \}
 \]
-This gives us a well-foundedness issue. The value interpretation is defined by induction on the type, but $\sub{\tau}{\mu\alpha.\;\tau}{\alpha}$ is not a structurally smaller type than $\mu\alpha. \; \tau$. 
+This gives us a well-foundedness issue. The value interpretation is defined by induction on the type, but $\sub{\tau}{\mu\alpha.\;\tau}{\alpha}$ is not a structurally smaller type than $\mu\alpha. \; \tau$.
 
 To solve this issue we index the interpretation by a natural number, $k$, which we write as follows:
 \[
   \vpres{\tau} = \{v \vbar \dots \}
 \]
-If $v$ belongs to the interpretation, then this is read as ``$v$ belongs to the interpretation of $\tau$ for $k$ steps.'' We interpret this in the following way; given a value that we run run for $k$ or fewer steps as in the value is used in some program context for fewer than $k$, then we will never notice that it does not have type $\tau$. If we use the same value in a program context that wants to run for more than $k$ steps, then we might notice that it does not have type $\tau$ which means that we might get stuck. This gives us an approximate guarantee.
+Hence, $v \in \vpres{\tau}$ is read as ``$v$ belongs to the
+interpretation of $\tau$ for $k$ steps.'' We interpret this in the
+following way: given a value that we run run for $k$ or fewer steps (as
+in the value is used in some program context for fewer than $k$ steps) then
+we will never notice that it does not have type $\tau$. If we use the
+same value in a program context that wants to run for more than $k$
+steps, then we might notice that it does not have type $\tau$ which
+means that we might get stuck. This gives us an approximate guarantee.
 
 We use this as an inductive metric to make our definition well-founded, so we define the interpretation on induction on the step-index followed by an inner induction on the type structure. Let us start by adding the step-index to our existing value interpretation:
 \begin{align*}
@@ -26,7 +33,7 @@ We use this as an inductive metric to make our definition well-founded, so we de
 $\true$ and $\false$ are in the value interpretation of $bool$ for any $k$, so $\true$ and $\false$ will for any $k$ look like it has type $bool$. To illustrate how to understand the value interpretation of $\tarrow{\tau_1}{\tau_2}$ please consider the following time line:  \\
 \begin{center}
 \begin{tikzpicture}
-    % draw horizontal line   
+    % draw horizontal line
     \draw[->] (0,0) -- (8,0);
 
     % draw vertical lines
@@ -37,7 +44,7 @@ $\true$ and $\false$ are in the value interpretation of $bool$ for any $k$, so $
     \draw (-2,0) node[below=3pt] {  } node[above=6pt] {$\lambda$-time line};
     \draw (0,0) node[below=3pt] {$k$} node[above=3pt] {$(\tlabs{x}{\tau_1}{e}) \; e_2$};
     \draw (3,0) node[below=3pt] {$ j+1 $} node[above=3pt] {$(\tlabs{x}{\tau_1}{e})\; v $};
-    \draw (4.3,0) node[below=3pt] {$   $} node[above=3pt] {$ \evalto $};    
+    \draw (4.3,0) node[below=3pt] {$   $} node[above=3pt] {$ \evalto $};
     \draw (5,0) node[below=3pt] {$ j $} node[above=3pt] {$ \sub{e}{v}{x} $};
     \draw (8,0) node[below=3pt] {$ 0 $} node[above=3pt] {$  $};
     \draw (9,0) node[below=3pt] {$   $} node[above=3pt] { 'future' };
@@ -49,7 +56,7 @@ We can now define the value interpretation of $\mu\alpha. \; \tau$:
 \[
   \vpres{\mu\alpha.\; \tau} = \{\fold \; v \vbar \forall j < k. \; v \in \vpres[j]{\sub{\tau}{\mu\alpha.\;\tau}{\alpha}} \}
 \]
-This definition is like the one we previously proposed, but with a step-index. This definition is well-founded because $j$ is required to be \emph{strictly} less than $k$ and as we define the interpretation on induction over the step-index this is indeed well founded. We do not define a value interpretation for type variables $\alpha$, as we have no polymorphism yet. The only place we have a type variable at the moment is in $\mu\alpha. \; \tau$, but in the interpretation we immediately close of the $\tau$ under the $\mu$, so we will never encounter a free type variable.
+This definition is like the one we previously proposed, but with a step-index. This definition is well-founded because $j$ is required to be \emph{strictly} less than $k$ and as we define the interpretation on induction over the step-index this is indeed well founded. We do not define a value interpretation for type variables $\alpha$, as we have no polymorphism yet. The only place we have a type variable at the moment is in $\mu\alpha. \; \tau$, but in the interpretation we immediately close off the $\tau$ under the $\mu$, so we will never encounter a free type variable.
 
 Finally, we define the expression interpretation:
 \[
@@ -58,7 +65,7 @@ Finally, we define the expression interpretation:
 To illustrate what is going on here consider the following time line: \\
 \begin{center}
 \begin{tikzpicture}
-    % draw horizontal line   
+    % draw horizontal line
     \draw[->] (0,0) -- (4,0);
 
     % draw vertical lines
@@ -73,7 +80,7 @@ To illustrate what is going on here consider the following time line: \\
 
     % brace
     \draw [decorate,decoration={brace,amplitude=10pt,mirror}]
-    (0,-0.6) -- (2,-0.6) node [black,midway,yshift=-0.5cm] 
+    (0,-0.6) -- (2,-0.6) node [black,midway,yshift=-0.5cm]
           {\footnotesize $j$};
 \end{tikzpicture}
 \end{center}
@@ -121,10 +128,10 @@ assume $v \in \vpres{\mu\alpha. \; \tau}$ and $j \leq k$, we then need to show $
     \]
   \end{lemma}
 \end{comment}
-\begin{proof}[Proof (Fundemental Property)]
+\begin{proof}[Proof (Fundamental Property)]
 Proof by induction over the typing derivation.
 \case{\TFold} \\~
-We need to show 
+We need to show
 \newcommand{\mat}{\ensuremath{\mu\alpha.\tau}}
 \[
   \Gamma \models \fold \; e : \mat
@@ -142,10 +149,10 @@ We instantiate this with $k$ and $\gamma \in \gpres{\Gamma}$ to get $\gamma(e) \
 
 The list example from the previous lecture used the sum type. Sums are a straight forward extension of the language. The extension of the value interpretation would be:
 \[
-  \vpres{\tau_1 + \tau_2} = \{\inl \; v_1 \vbar v_1 \in \vpres{\tau_1}\} \cup 
+  \vpres{\tau_1 + \tau_2} = \{\inl \; v_1 \vbar v_1 \in \vpres{\tau_1}\} \cup
                             \{\inr \; v_2 \vbar v_2 \in \vpres{\tau_2}\}
 \]
-We can use $k$ directly or $k$ decremented by one. It depends on whether we want casing to take up a step. Either way the definition is well-founded. 
+We can use $k$ directly or $k$ decremented by one. It depends on whether we want casing to take up a step. Either way the definition is well-founded.
 
 \subsection*{Universal Types}
 Now we shift focus from type safety and termination to program equivalence. To motivate the need for arguing about program equivalence we first introduce universal types.
@@ -165,8 +172,8 @@ $sort$ takes a type, a list of elements of this type, and a comparison function 
 Whereas sort instantiated with the $string$ type, but given an integer list would not be a well typed instantiation.
 \[
   sort \; [string] \; \cancelto{("a","c","b")}{(3,7,5)} \; string<
-\]
-Here the application with the list $(3,7,5)$ is not well typed, but if we instead use a list of strings, then it type checks. 
+\]%string< renders unclearly. Perhaps `lex-order` or some other word?
+Here the application with the list $(3,7,5)$ is not well typed, but if we instead use a list of strings, then it type checks.
 
 We want to extend the simply typed lambda calculus with functions that abstract over types in the same way lambda abstractions, $\tlabs{x}{\tau}{e}$, abstract over terms. We do that by introducing a type abstraction:
 \[
@@ -179,7 +186,7 @@ This function abstracts over the type $\alpha$ which allows $e$ to depend on $\a
   \tau &::= \dots \vbar \forall \alpha. \; \tau \\
   e    &::= \dots \vbar \tLabs{e} \vbar e[\tau] \\
   v    &::= \dots \vbar \tLabs{e}\\
-  E    &::= \dots \vbar E[\tau] 
+  E    &::= \dots \vbar E[\tau]
 \end{align*}
 \[
   (\tLabs{e})[\tau] \evalto e[\tau/\alpha]
@@ -188,7 +195,7 @@ Type environment\footnote{We do not annotate $\alpha$ with a kind, as we only ha
 \[
   \Delta ::= \mtenv \vbar \Delta,\; \alpha
 \]
-With the addition of type environments of type variables we our typing judgments now have the following form:
+With the addition of type environments of type variables our typing judgments now have the following form:
 \[
   \Delta,\Gamma \vdash e : \tau
 \]
@@ -212,9 +219,9 @@ For any type judgment $\Delta,\Gamma \vdash e : \tau$ we have as an invariant th
   \FTVar
 \hspace{1cm}
   \FTIf
-\]  
+\]
 \[
-  \FTAbs 
+  \FTAbs
 \hspace{1cm}
   \FTApp
 \]
@@ -255,30 +262,40 @@ To define a contextual equivalence we first define the notion of a program conte
         &\vbar C[\tau]
 \end{align*}
 We need a notion of context typing. For simplicity we just introduce it for simply typed lambda calculus. The context typing is written as:
-\[
+\[%Hmm, some way of making this clearer? Natural language or perhaps
+  %an inference rule of some sort?
 C:\; (\Gamma \vdash \tau) \implies (\Gamma' \vdash \tau') \implies \Gamma \vdash e : \tau \implies \Gamma' \vdash C[e] : \tau'
 \]
 This means that for any expression $e$ of type $\tau$ under $\Gamma$ if we embed it into $C$, then the type of the embedding is $\tau'$ under $\Gamma'$.
 
-Informally we want contextual equivalence to say that no matter what program context we embed either of the two expressions in, it gives the same result. This is also called as observational equivalence as the program context is unable to observe any difference no matter what expression we embed in it. We can of course not plug an arbitrary term into the hole, so we annotate the equivalence with the type of the hole which means that the two contextual equivalent expressions have to have that type.
+Informally we want contextual equivalence to say that no matter what program context we embed either of the two expressions in, it gives the same result. This is also called observational equivalence, as the program context is unable to observe any difference no matter what expression we embed in it. We can of course not plug an arbitrary term into the hole, so we annotate the equivalence with the type of the hole which means that the two contextual equivalent expressions have to have that type.
 \[
   \Delta; \Gamma \vdash \ctxeq{e_1}{e_2} : \tau \eqdef \forall C.\; (\Delta ; \Gamma \vdash \tau ) \implies (\mtenv ; \mtenv \vdash \tau') \implies (C[e_1] \Downarrow v \iff C[e_2] \Downarrow v)
 \]
 This definition assumes that $e_1$ and $e_2$ has type $\tau$ under the specified contexts.
 
-Contextual equivalence is handy because we want to be able to reason about the equivalence of two implementations. Say we have two implementations of a stack, one is implemented using an array the other using a list. If we can show that the two implementations are contextual equivalent, then we can use the more efficient one over the less efficient one and know that the complete program will behave the same.
+Contextual equivalence is handy because we want to be able to reason
+about the equivalence of two implementations. Say we have two
+implementations of a stack, one is implemented using an array the
+other using a list. If we can show that the two implementations are
+contextual equivalent, then we can use the more efficient one over the
+less efficient one and know that the complete program will behave the
+same. %perhaps also a word on how we could take the simpler of the two
+      %as ``specification'', and hence show correctness of a more
+      %efficient, fast or otherwise clever implementation _with
+      %respect to_ the specification?
 
 In the next lecture we will introduce a logical relation such that
 \[
-  \Delta ; \Gamma \vdash \lreq{e_1}{e_2} : \tau \implies \text{contextual equivalence \ctxeq{}{}} 
+  \Delta ; \Gamma \vdash \lreq{e_1}{e_2} : \tau \implies \text{contextual equivalence \ctxeq{}{}}
 \]
-That is we want to show that the logical relation is sound with respect to contextual equivalence. 
+That is we want to show that the logical relation is sound with respect to contextual equivalence.
 
 If we can prove the above soundness, then we can state our free theorems with $\lreq{}{}$ rather than $\ctxeq{}{}$ and get the same result if we can prove the logical equivalence. We would like to do this as it is difficult to directly prove two things are contextual equivalent. A direct proof has to talk about all possible program contexts which we could do using induction, but the lambda-abstraction case turns out to be difficult. This motivates the use of other proof methods where using a logical relation is one of them.
 
 \subsection*{Exercises}
 \begin{enumerate}
-\item Do the lambda and application case of the \emph{Fundamental Property} theorem.%Specify in what proof, probably fundemental property
+\item Do the lambda and application case of the \emph{Fundamental Property} theorem.%Specify in what proof, probably fundamental property
 \item Try to prove the \emph{monotonicity} lemma where the definition of the value interpretation has been adjusted with:
 \[
 \vpres{\tarrow{\tau_1}{\tau_2}} = \{\tlabs{x}{\tau_1}{e} \vbar \; \forall v \in \vpres{\tau_1}. \; \sub{e}{v}{x} \in \epres{\tau_2} \}
